riscv/tests/ui/fail_unknown_trait.stderr
error: Unknown trait name. Expected: 'ExceptionNumber', 'CoreInterruptNumber', 'ExternalInterruptNumber', 'PriorityNumber', or 'HartIdNumber'
 --> tests/ui/fail_unknown_trait.rs:1:26
  |
1 | #[riscv::pac_enum(unsafe InterruptNumber)]
  |                          ^^^^^^^^^^^^^^^
